--- a/Skin/零碎/line-height.html
+++ b/Skin/零碎/line-height.html
@@ -40,7 +40,7 @@
   <div class="explanation">
     在line-height区域内，文字永远都是居中的
     <br>
-    如果不指定div的高度，div则有line-height撑开，文字自然垂直居中
+    如果不指定div的高度，div则由line-height撑开，文字自然垂直居中
     <br>
     如果定制div的高度，在单行文本的情况下，想要实现文字垂直居中的效果，必须让line-height区域在垂直方向上占满div，就必须让line-height等于height才行
     <br>
